--- a/report.Rmd
+++ b/report.Rmd
@@ -31,6 +31,11 @@ random_numbers3 <- readRDS(
 random_numbers4 <- readRDS(
   here::here("output/random_numbers4.rds")
 )
+#! TO DO: 
+#!   read random_numbers4 from output directory
+random_numbers5 <- readRDS(
+  here::here("output/random_numbers5.rds")
+)
 ```
 
 # Random numbers 1
@@ -58,4 +63,10 @@ hist(random_numbers3)
 ```{r, random-numbers4-histogram}
 #| fig.cap = "forth set of random numbers"
 hist(random_numbers4)
+```
+# Random numbers 5
+
+```{r, random-numbers5-histogram}
+#| fig.cap = "fifth set of random numbers"
+hist(random_numbers5)
 ```
